prev issue w/ quotes was b/c of no spacing, treated quotes as one long word, fixed

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -107,6 +107,7 @@ main {
 #quoteDisplay {
     max-width: 600px;
     text-align: center; 
+    margin: auto;
 }
 
 .col1 {
